--- a/discord/src/paginas/home/index.html
+++ b/discord/src/paginas/home/index.html
@@ -4,6 +4,14 @@
       <link rel="stylesheet" href="index.css" />
     </head>
     <body>
+        <div class = "secao-02">
+          <img src = "../../assets/imagens/estudo-grupo.svg" />
+         
+          <div class = "s2-textos">
+            <h1>Crie um espaço controlado por convite onde você se sinta em casa</h1>
+            <p>Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
 
+          </div>
+        </div>
     </body>
 </html>
