Finalizando projeto com correção nos textos

--- a/discord/src/paginas/dowloads/index.html
+++ b/discord/src/paginas/dowloads/index.html
@@ -49,12 +49,12 @@
           </div>
         </div>
         <div class = "secao-03">
-          <img src = "../../assets/imagens/contatos.svg" />
          
           <div class = "s3-textos">
             <h1>Aqui é fácil se encontrar</h1>
             <p>Entre no canal de voz quando estiver à toa. Amigos no mesmo servidor podem te ver e entrar imediatamente, sem nem ter que fazer a chamada.</p>
           </div>
+          <img src = "../../assets/imagens/contatos.svg" />
         </div>
 
         <div class = "secao-04">
@@ -143,7 +143,7 @@
                   <li>Diretrizes</li>
                   <li>Reconhecimentos</li>
                   <li>Lincenças</li>
-                  <li>moderação</li>
+                  <li>Moderação</li>
               </ul>
           </div>
   
